fixed cart component overflow

--- a/src/Styles/CartComponent.module.css
+++ b/src/Styles/CartComponent.module.css
@@ -5,7 +5,6 @@
     display: flex;
     justify-content: space-around;
     gap: 10px;
-    height: fit-content;
 }
 
 .form{
