--- a/src/Styles/Product.module.css
+++ b/src/Styles/Product.module.css
@@ -96,7 +96,7 @@ button:disabled{
 }
 
 /* cartcomponent css */
-/* .container{
+.container{
     height: fit-content;
     max-height: 65vh;
     overflow: scroll;
@@ -104,7 +104,7 @@ button:disabled{
 
 .container::-webkit-scrollbar{
     display: none;
-} */
+}
 
 
 
